[package]
name = "dnsqmon"
version = "0.0.1"
edition = "2024"

[features]
# For builds inside Docker where there's no .git available: skip the
# git_version!() macro and use GIT_VERSION from the build environment instead.
# See build-docker.sh for how it's injected.
version-from-env = []

[dependencies]
pcap = "2.2"
dns-parser = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
git-version = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
